@@ -9,7 +9,7 @@ gem 'authlogic', :git => 'git://github.com/odorcicd/authlogic.git', :branch => '
 gem 'paperclip', :git => 'git://github.com/thoughtbot/paperclip.git'
 gem 'acts_as_ferret', '= 0.5.2', :git => "git://github.com/primerano/acts_as_ferret.git"
 gem 'delayed_job' 
-
+gem "will_paginate", "~> 3.0.pre2"
 
 
 # To use debugger
