@@ -42,4 +42,5 @@
 <% end %>
 </table>
 
+<%= will_paginate @mensajes %>
 </div>
