@@ -1,3 +1,9 @@
+2010-12-05 
+----------
+
+* Incluidas notificaciones y mensajes. 
+* Incluido will_paginate
+* Incluido delayed_job para las consultas distribuidas
 
 2010-11-27 
 ----------
